--- a/ExamenBack/appsettings.json
+++ b/ExamenBack/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "connectionString": "Server=.;Database=Examen;Trusted_Connection=True;"
+    //"connectionString": "Server=examen_jose.database.windows.net;Database=Examen;User ID=master;Password=159753"
+  }
 }
