--- a/ExamenBack/appsettings.json
+++ b/ExamenBack/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "Server=.;Database=Examen;Trusted_Connection=True;"
-    //"connectionString": "Server=examen_jose.database.windows.net;Database=Examen;User ID=master;Password=159753"
+    //"connectionString": "Server=.;Database=Examen;Trusted_Connection=True;"
+    "connectionString": "Server=examen-efitec.database.windows.net;Database=Jose;User ID=master;Password=159753Jose"
   }
 }
